2008-11-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.211.

2008-11-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.xs
	* GOption.xs (added)
	* gperl.h
	* Makefile.PL
	* MANIFEST
	* t/options.t (added)
	* typemap: Add Glib::OptionContext and Glib::OptionGroup, wrapping
	glib's command line option parser.

2008-11-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* gperl-private.h: Don't include perl.h.  This header is always
	included after gperl.h which includes everything already.  And
	including perl.h alone doesn't work and isn't enough anyway.

2008-11-15  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBoxed.xs (gperl_register_boxed): Use the copy of the passed-in
	package name for the key of info_by_package to avoid problems when
	the package name is dynamically allocated.

	* GBoxed.xs (gperl_register_boxed)
	* GObject.xs (gperl_register_object)
	* GType.xs (gperl_register_fundamental): Always insert into the
	lookup tables in the correct order to avoid prematurely freeing
	the package name.

2008-11-12  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GObject.xs: Add newlines at the end of debugging messages that
	lack them to keep perl from adding line number information.

2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (gperl_type_from_package): Also try
	gperl_param_spec_type_from_package on the package.

2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* Makefile.PL
	* NEWS
	* README: Unstable release 1.210.

2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (add_interfaces): Fail loudly and with a clear error
	message when we encounter an unknown interface when registering a
	new type.

2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/lazy-loader.t -> t/lazy_loader.t: Rename this test to blend in
	with the others which use underscores to separate words.

2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.exports